--- a/src/css/App.css
+++ b/src/css/App.css
@@ -28,10 +28,10 @@
   border-radius: 2px;
   height:auto;
   width:auto;
-  bottom:0;
+  /*bottom:0;*/
   top:0;
   margin:10px;
-  margin-bottom:10px;
+  /*margin-bottom:10px;*/
   background-color:#fff;
   position:fixed!important;
   z-index:1;
