--- a/src/css/App.css
+++ b/src/css/App.css
@@ -11,7 +11,7 @@
 
 .topbar {
   font-family: Impact, Charcoal, sans-serif;
-  font-size: calc(8px + 2vmin);
+  font-size: calc(10px + 2vmin);
   border-radius: 5px;
   margin:10px;
   height:auto;
@@ -24,7 +24,7 @@
 
 .bottombar {
   font-family: Impact, Charcoal, sans-serif;
-  font-size: calc(4px + 2vmin);
+  font-size: calc(6px + 2vmin);
   border-radius: 5px;
   margin:24px;
   height:auto;
@@ -40,7 +40,7 @@
 
 .sidebar {
   font-family: Impact, Charcoal, sans-serif;
-  font-size: calc(5px + 1vmin);
+  font-size: calc(10px + 1vmin);
   border-radius: 5px;
   height:auto;
   width:auto;
@@ -56,7 +56,7 @@
 
 .drop {
   font-family: Impact, Charcoal, sans-serif;
-  font-size: calc(5px + 1vmin);
+  font-size: calc(10px + 1vmin);
   border-radius: 5px;
   height:auto;
   width:inherit;
@@ -66,7 +66,7 @@
 
 .panel {
   font-family: Impact, Charcoal, sans-serif;
-  font-size: calc(5px + 1vmin);
+  font-size: calc(5px + 2vmin);
   border-radius: 5px;
   height:auto;
   width:auto;
@@ -87,8 +87,12 @@
 
 .panel-title {
   font-family: Impact, Charcoal, sans-serif;
-  font-size: calc(2px + 2vmin);
+  font-size: calc(10px + 2vmin);
   text-align:center;
+}
+
+.panel-header {
+  border-bottom: 1px solid #bbb;
 }
 
 .panel-center {
@@ -101,6 +105,14 @@
   display: flex;
   align-items: right;
   justify-content: right;
+}
+
+.panel-table {
+  width: 100%
+}
+
+.panel-table-el {
+  border-top: 1px solid #bbb
 }
 
 a {
